# Unsupervised_Elicitation_of_Language_Models

./: README.md  pyproject.toml  requirements.txt
 /: pyproject.toml
data/: truthfulqa_test.json  truthfulqa_train.json
notebooks/: llama_context_size.ipynb
src/icm/: __init__.py  dataset.py  metrics.py  model.py  plot.py  run.py
